// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<AccountDetailContainer /> > should add new years when buttons are clicked > with new years added 1`] = `
<body>
  <div>
    <script
      nonce=""
    >
      ((e,r,s,u,d,m,l,h)=&gt;
      {let c=document.documentElement,v=["light","dark"];function p(i){(Array.isArray(e)?e:[e]).forEach(y=&gt;
      {let k=y==="class",S=k&&m?d.map(f=&gt;
      m[f]||f):d;k?(c.classList.remove(...S),c.classList.add(i)):c.setAttribute(y,i)}),R(i)}function R(i){h&&v.includes(i)&&(c.style.colorScheme=i)}function a(){return window.matchMedia("(prefers-color-scheme: dark)").matches?"dark":"light"}if(u)p(u);else try{let i=localStorage.getItem(r)||s,y=l&&i==="system"?a():i;p(y)}catch(i){}})("class","theme","system",null,["light","dark"],null,true,true)
    </script>
    <div
      class="chakra-stack css-1uphe7b"
    >
      <div
        class="chakra-stack css-1y3f6ad"
      >
        <div
          class="css-cgq59l"
        >
          <h2
            class="chakra-heading css-1je2o1s"
          >
            CURRENT
          </h2>
          <h1
            class="chakra-heading css-mytsjf"
          >
            My current account
          </h1>
        </div>
        <div
          class="css-0"
        >
          <button
            class="chakra-button css-1wffpj8"
            disabled=""
            type="button"
          >
            <div
              class="css-uoihn2"
            >
              <span
                class="chakra-spinner css-12xlz0b"
              />
            </div>
            <span
              class="css-q7lffx"
            >
              edit
            </span>
          </button>
        </div>
      </div>
      <div
        class="chakra-stack css-ox2yq"
      >
        <div
          class="chakra-stack css-1igwmid"
        >
          <h3
            class="chakra-heading css-e8b6d6"
          >
            2021
          </h3>
          <button
            class="chakra-button css-mow6mt"
            type="button"
          >
            deleteYear
          </button>
        </div>
        <div
          class="d_flex flex-d_row gap_5"
        >
          <div>
            <p
              class="css-gyi3bv"
            >
              January
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              February
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              March
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              April
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              May
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              June
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              July
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              August
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              September
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              October
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              November
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              December
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
        </div>
        <div
          class="chakra-stack css-1igwmid"
        >
          <h3
            class="chakra-heading css-e8b6d6"
          >
            2023
          </h3>
          <button
            class="chakra-button css-mow6mt"
            type="button"
          >
            deleteYear
          </button>
        </div>
        <div
          class="d_flex flex-d_row gap_5"
        >
          <div>
            <p
              class="css-gyi3bv"
            >
              January
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              February
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              March
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              April
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              May
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              June
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              July
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              August
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              September
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              October
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              November
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              December
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
        </div>
      </div>
      <div
        class="chakra-stack css-1f0wxn3"
      >
        <button
          class="chakra-button css-tx3yv8"
          disabled=""
          type="button"
        >
          <div
            class="css-uoihn2"
          >
            <span
              class="chakra-spinner css-12xlz0b"
            />
          </div>
          <span
            class="css-q7lffx"
          >
            addPrevYear
          </span>
        </button>
        <button
          class="chakra-button css-tx3yv8"
          disabled=""
          type="button"
        >
          <div
            class="css-uoihn2"
          >
            <span
              class="chakra-spinner css-12xlz0b"
            />
          </div>
          <span
            class="css-q7lffx"
          >
            addNextYear
          </span>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`<AccountDetailContainer /> > should render 1`] = `
<body>
  <div>
    <script
      nonce=""
    >
      ((e,r,s,u,d,m,l,h)=&gt;
      {let c=document.documentElement,v=["light","dark"];function p(i){(Array.isArray(e)?e:[e]).forEach(y=&gt;
      {let k=y==="class",S=k&&m?d.map(f=&gt;
      m[f]||f):d;k?(c.classList.remove(...S),c.classList.add(i)):c.setAttribute(y,i)}),R(i)}function R(i){h&&v.includes(i)&&(c.style.colorScheme=i)}function a(){return window.matchMedia("(prefers-color-scheme: dark)").matches?"dark":"light"}if(u)p(u);else try{let i=localStorage.getItem(r)||s,y=l&&i==="system"?a():i;p(y)}catch(i){}})("class","theme","system",null,["light","dark"],null,true,true)
    </script>
    <div
      class="chakra-stack css-1uphe7b"
    >
      <div
        class="chakra-stack css-1y3f6ad"
      >
        <div
          class="css-cgq59l"
        >
          <h2
            class="chakra-heading css-1je2o1s"
          >
            CURRENT
          </h2>
          <h1
            class="chakra-heading css-mytsjf"
          >
            My current account
          </h1>
        </div>
        <div
          class="css-0"
        >
          <button
            class="chakra-button css-1wffpj8"
            type="button"
          >
            edit
          </button>
        </div>
      </div>
      <div
        class="chakra-stack css-ox2yq"
      >
        <div
          class="chakra-stack css-1igwmid"
        >
          <h3
            class="chakra-heading css-e8b6d6"
          >
            2021
          </h3>
          <button
            class="chakra-button css-mow6mt"
            type="button"
          >
            deleteYear
          </button>
        </div>
        <div
          class="d_flex flex-d_row gap_5"
        >
          <div>
            <p
              class="css-gyi3bv"
            >
              January
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              February
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              March
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              April
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              May
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              June
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              July
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              August
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              September
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              October
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              November
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              December
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
        </div>
        <div
          class="chakra-stack css-1igwmid"
        >
          <h3
            class="chakra-heading css-e8b6d6"
          >
            2023
          </h3>
          <button
            class="chakra-button css-mow6mt"
            type="button"
          >
            deleteYear
          </button>
        </div>
        <div
          class="d_flex flex-d_row gap_5"
        >
          <div>
            <p
              class="css-gyi3bv"
            >
              January
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              February
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              March
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              April
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              May
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              June
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              July
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              August
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              September
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              October
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              November
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              December
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
        </div>
      </div>
      <div
        class="chakra-stack css-1f0wxn3"
      >
        <button
          class="chakra-button css-tx3yv8"
          type="button"
        >
          addPrevYear
        </button>
        <button
          class="chakra-button css-tx3yv8"
          type="button"
        >
          addNextYear
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`<AccountDetailContainer /> > should render add current year button and add current year when clicked > with current year added 1`] = `
<body>
  <div>
    <script
      nonce=""
    >
      ((e,r,s,u,d,m,l,h)=&gt;
      {let c=document.documentElement,v=["light","dark"];function p(i){(Array.isArray(e)?e:[e]).forEach(y=&gt;
      {let k=y==="class",S=k&&m?d.map(f=&gt;
      m[f]||f):d;k?(c.classList.remove(...S),c.classList.add(i)):c.setAttribute(y,i)}),R(i)}function R(i){h&&v.includes(i)&&(c.style.colorScheme=i)}function a(){return window.matchMedia("(prefers-color-scheme: dark)").matches?"dark":"light"}if(u)p(u);else try{let i=localStorage.getItem(r)||s,y=l&&i==="system"?a():i;p(y)}catch(i){}})("class","theme","system",null,["light","dark"],null,true,true)
    </script>
    <div
      class="chakra-stack css-1uphe7b"
    >
      <div
        class="chakra-stack css-1y3f6ad"
      >
        <div
          class="css-cgq59l"
        >
          <h2
            class="chakra-heading css-1je2o1s"
          >
            CURRENT
          </h2>
          <h1
            class="chakra-heading css-mytsjf"
          >
            My current account
          </h1>
        </div>
        <div
          class="css-0"
        >
          <button
            class="chakra-button css-1wffpj8"
            disabled=""
            type="button"
          >
            <div
              class="css-uoihn2"
            >
              <span
                class="chakra-spinner css-12xlz0b"
              />
            </div>
            <span
              class="css-q7lffx"
            >
              edit
            </span>
          </button>
        </div>
      </div>
      <div
        class="chakra-stack css-ox2yq"
      >
        <div
          class="chakra-stack css-1igwmid"
        >
          <h3
            class="chakra-heading css-e8b6d6"
          >
            2021
          </h3>
          <button
            class="chakra-button css-mow6mt"
            type="button"
          >
            deleteYear
          </button>
        </div>
        <div
          class="d_flex flex-d_row gap_5"
        >
          <div>
            <p
              class="css-gyi3bv"
            >
              January
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              February
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              March
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              April
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              May
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              June
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              July
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              August
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              September
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              October
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              November
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              December
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
        </div>
        <div
          class="chakra-stack css-1igwmid"
        >
          <h3
            class="chakra-heading css-e8b6d6"
          >
            2023
          </h3>
          <button
            class="chakra-button css-mow6mt"
            type="button"
          >
            deleteYear
          </button>
        </div>
        <div
          class="d_flex flex-d_row gap_5"
        >
          <div>
            <p
              class="css-gyi3bv"
            >
              January
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              February
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              March
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              April
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              May
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              June
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              July
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              August
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              September
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              October
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              November
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              December
            </p>
            <p
              class="css-gyi3bv"
            >
              £1,000
            </p>
          </div>
        </div>
      </div>
      <div
        class="chakra-stack css-1f0wxn3"
      >
        <button
          class="chakra-button css-tx3yv8"
          disabled=""
          type="button"
        >
          <div
            class="css-uoihn2"
          >
            <span
              class="chakra-spinner css-12xlz0b"
            />
          </div>
          <span
            class="css-q7lffx"
          >
            addPrevYear
          </span>
        </button>
        <button
          class="chakra-button css-tx3yv8"
          disabled=""
          type="button"
        >
          <div
            class="css-uoihn2"
          >
            <span
              class="chakra-spinner css-12xlz0b"
            />
          </div>
          <span
            class="css-q7lffx"
          >
            addNextYear
          </span>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`<AccountDetailContainer /> > should toggle edit mode when button is clicked, changed value and save new value > with edit mode enabled 1`] = `
<body>
  <div>
    <script
      nonce=""
    >
      ((e,r,s,u,d,m,l,h)=&gt;
      {let c=document.documentElement,v=["light","dark"];function p(i){(Array.isArray(e)?e:[e]).forEach(y=&gt;
      {let k=y==="class",S=k&&m?d.map(f=&gt;
      m[f]||f):d;k?(c.classList.remove(...S),c.classList.add(i)):c.setAttribute(y,i)}),R(i)}function R(i){h&&v.includes(i)&&(c.style.colorScheme=i)}function a(){return window.matchMedia("(prefers-color-scheme: dark)").matches?"dark":"light"}if(u)p(u);else try{let i=localStorage.getItem(r)||s,y=l&&i==="system"?a():i;p(y)}catch(i){}})("class","theme","system",null,["light","dark"],null,true,true)
    </script>
    <div
      class="chakra-stack css-1uphe7b"
    >
      <div
        class="chakra-stack css-1y3f6ad"
      >
        <div
          class="css-cgq59l"
        >
          <h2
            class="chakra-heading css-1je2o1s"
          >
            CURRENT
          </h2>
          <h1
            class="chakra-heading css-mytsjf"
          >
            My current account
          </h1>
        </div>
        <div
          class="css-0"
        >
          <button
            class="chakra-button css-1wffpj8"
            type="button"
          >
            save
          </button>
        </div>
      </div>
      <div
        class="chakra-stack css-ox2yq"
      >
        <div
          class="chakra-stack css-1igwmid"
        >
          <h3
            class="chakra-heading css-e8b6d6"
          >
            2021
          </h3>
          <button
            class="chakra-button css-mow6mt"
            type="button"
          >
            deleteYear
          </button>
        </div>
        <div
          class="d_flex flex-d_row gap_5"
        >
          <div>
            <p
              class="css-gyi3bv"
            >
              January
            </p>
            <div
              class="d_flex flex-d_column gap_2"
            >
              <label
                for="2021-January"
                hidden=""
              >
                2021-January
              </label>
              <div>
                <div
                  class="css-1op6ogi"
                >
                  <input
                    class="chakra-input css-1ajgvgj"
                    data-month="1"
                    data-year="2021"
                    id="2021-January"
                    name="amount"
                    placeholder="0.00"
                    type="number"
                    value="1000"
                  />
                </div>
              </div>
            </div>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              February
            </p>
            <div
              class="d_flex flex-d_column gap_2"
            >
              <label
                for="2021-February"
                hidden=""
              >
                2021-February
              </label>
              <div>
                <div
                  class="css-1op6ogi"
                >
                  <input
                    class="chakra-input css-1ajgvgj"
                    data-month="2"
                    data-year="2021"
                    id="2021-February"
                    name="amount"
                    placeholder="0.00"
                    type="number"
                    value="1000"
                  />
                </div>
              </div>
            </div>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              March
            </p>
            <div
              class="d_flex flex-d_column gap_2"
            >
              <label
                for="2021-March"
                hidden=""
              >
                2021-March
              </label>
              <div>
                <div
                  class="css-1op6ogi"
                >
                  <input
                    class="chakra-input css-1ajgvgj"
                    data-month="3"
                    data-year="2021"
                    id="2021-March"
                    name="amount"
                    placeholder="0.00"
                    type="number"
                    value="1000"
                  />
                </div>
              </div>
            </div>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              April
            </p>
            <div
              class="d_flex flex-d_column gap_2"
            >
              <label
                for="2021-April"
                hidden=""
              >
                2021-April
              </label>
              <div>
                <div
                  class="css-1op6ogi"
                >
                  <input
                    class="chakra-input css-1ajgvgj"
                    data-month="4"
                    data-year="2021"
                    id="2021-April"
                    name="amount"
                    placeholder="0.00"
                    type="number"
                    value="1000"
                  />
                </div>
              </div>
            </div>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              May
            </p>
            <div
              class="d_flex flex-d_column gap_2"
            >
              <label
                for="2021-May"
                hidden=""
              >
                2021-May
              </label>
              <div>
                <div
                  class="css-1op6ogi"
                >
                  <input
                    class="chakra-input css-1ajgvgj"
                    data-month="5"
                    data-year="2021"
                    id="2021-May"
                    name="amount"
                    placeholder="0.00"
                    type="number"
                    value="1000"
                  />
                </div>
              </div>
            </div>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              June
            </p>
            <div
              class="d_flex flex-d_column gap_2"
            >
              <label
                for="2021-June"
                hidden=""
              >
                2021-June
              </label>
              <div>
                <div
                  class="css-1op6ogi"
                >
                  <input
                    class="chakra-input css-1ajgvgj"
                    data-month="6"
                    data-year="2021"
                    id="2021-June"
                    name="amount"
                    placeholder="0.00"
                    type="number"
                    value="1000"
                  />
                </div>
              </div>
            </div>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              July
            </p>
            <div
              class="d_flex flex-d_column gap_2"
            >
              <label
                for="2021-July"
                hidden=""
              >
                2021-July
              </label>
              <div>
                <div
                  class="css-1op6ogi"
                >
                  <input
                    class="chakra-input css-1ajgvgj"
                    data-month="7"
                    data-year="2021"
                    id="2021-July"
                    name="amount"
                    placeholder="0.00"
                    type="number"
                    value="1000"
                  />
                </div>
              </div>
            </div>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              August
            </p>
            <div
              class="d_flex flex-d_column gap_2"
            >
              <label
                for="2021-August"
                hidden=""
              >
                2021-August
              </label>
              <div>
                <div
                  class="css-1op6ogi"
                >
                  <input
                    class="chakra-input css-1ajgvgj"
                    data-month="8"
                    data-year="2021"
                    id="2021-August"
                    name="amount"
                    placeholder="0.00"
                    type="number"
                    value="1000"
                  />
                </div>
              </div>
            </div>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              September
            </p>
            <div
              class="d_flex flex-d_column gap_2"
            >
              <label
                for="2021-September"
                hidden=""
              >
                2021-September
              </label>
              <div>
                <div
                  class="css-1op6ogi"
                >
                  <input
                    class="chakra-input css-1ajgvgj"
                    data-month="9"
                    data-year="2021"
                    id="2021-September"
                    name="amount"
                    placeholder="0.00"
                    type="number"
                    value="1000"
                  />
                </div>
              </div>
            </div>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              October
            </p>
            <div
              class="d_flex flex-d_column gap_2"
            >
              <label
                for="2021-October"
                hidden=""
              >
                2021-October
              </label>
              <div>
                <div
                  class="css-1op6ogi"
                >
                  <input
                    class="chakra-input css-1ajgvgj"
                    data-month="10"
                    data-year="2021"
                    id="2021-October"
                    name="amount"
                    placeholder="0.00"
                    type="number"
                    value="1000"
                  />
                </div>
              </div>
            </div>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              November
            </p>
            <div
              class="d_flex flex-d_column gap_2"
            >
              <label
                for="2021-November"
                hidden=""
              >
                2021-November
              </label>
              <div>
                <div
                  class="css-1op6ogi"
                >
                  <input
                    class="chakra-input css-1ajgvgj"
                    data-month="11"
                    data-year="2021"
                    id="2021-November"
                    name="amount"
                    placeholder="0.00"
                    type="number"
                    value="1000"
                  />
                </div>
              </div>
            </div>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              December
            </p>
            <div
              class="d_flex flex-d_column gap_2"
            >
              <label
                for="2021-December"
                hidden=""
              >
                2021-December
              </label>
              <div>
                <div
                  class="css-1op6ogi"
                >
                  <input
                    class="chakra-input css-1ajgvgj"
                    data-month="12"
                    data-year="2021"
                    id="2021-December"
                    name="amount"
                    placeholder="0.00"
                    type="number"
                    value="1000"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="chakra-stack css-1igwmid"
        >
          <h3
            class="chakra-heading css-e8b6d6"
          >
            2023
          </h3>
          <button
            class="chakra-button css-mow6mt"
            type="button"
          >
            deleteYear
          </button>
        </div>
        <div
          class="d_flex flex-d_row gap_5"
        >
          <div>
            <p
              class="css-gyi3bv"
            >
              January
            </p>
            <div
              class="d_flex flex-d_column gap_2"
            >
              <label
                for="2023-January"
                hidden=""
              >
                2023-January
              </label>
              <div>
                <div
                  class="css-1op6ogi"
                >
                  <input
                    class="chakra-input css-1ajgvgj"
                    data-month="1"
                    data-year="2023"
                    id="2023-January"
                    name="amount"
                    placeholder="0.00"
                    type="number"
                    value="1000"
                  />
                </div>
              </div>
            </div>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              February
            </p>
            <div
              class="d_flex flex-d_column gap_2"
            >
              <label
                for="2023-February"
                hidden=""
              >
                2023-February
              </label>
              <div>
                <div
                  class="css-1op6ogi"
                >
                  <input
                    class="chakra-input css-1ajgvgj"
                    data-month="2"
                    data-year="2023"
                    id="2023-February"
                    name="amount"
                    placeholder="0.00"
                    type="number"
                    value="1000"
                  />
                </div>
              </div>
            </div>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              March
            </p>
            <div
              class="d_flex flex-d_column gap_2"
            >
              <label
                for="2023-March"
                hidden=""
              >
                2023-March
              </label>
              <div>
                <div
                  class="css-1op6ogi"
                >
                  <input
                    class="chakra-input css-1ajgvgj"
                    data-month="3"
                    data-year="2023"
                    id="2023-March"
                    name="amount"
                    placeholder="0.00"
                    type="number"
                    value="1000"
                  />
                </div>
              </div>
            </div>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              April
            </p>
            <div
              class="d_flex flex-d_column gap_2"
            >
              <label
                for="2023-April"
                hidden=""
              >
                2023-April
              </label>
              <div>
                <div
                  class="css-1op6ogi"
                >
                  <input
                    class="chakra-input css-1ajgvgj"
                    data-month="4"
                    data-year="2023"
                    id="2023-April"
                    name="amount"
                    placeholder="0.00"
                    type="number"
                    value="1000"
                  />
                </div>
              </div>
            </div>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              May
            </p>
            <div
              class="d_flex flex-d_column gap_2"
            >
              <label
                for="2023-May"
                hidden=""
              >
                2023-May
              </label>
              <div>
                <div
                  class="css-1op6ogi"
                >
                  <input
                    class="chakra-input css-1ajgvgj"
                    data-month="5"
                    data-year="2023"
                    id="2023-May"
                    name="amount"
                    placeholder="0.00"
                    type="number"
                    value="1000"
                  />
                </div>
              </div>
            </div>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              June
            </p>
            <div
              class="d_flex flex-d_column gap_2"
            >
              <label
                for="2023-June"
                hidden=""
              >
                2023-June
              </label>
              <div>
                <div
                  class="css-1op6ogi"
                >
                  <input
                    class="chakra-input css-1ajgvgj"
                    data-month="6"
                    data-year="2023"
                    id="2023-June"
                    name="amount"
                    placeholder="0.00"
                    type="number"
                    value="1000"
                  />
                </div>
              </div>
            </div>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              July
            </p>
            <div
              class="d_flex flex-d_column gap_2"
            >
              <label
                for="2023-July"
                hidden=""
              >
                2023-July
              </label>
              <div>
                <div
                  class="css-1op6ogi"
                >
                  <input
                    class="chakra-input css-1ajgvgj"
                    data-month="7"
                    data-year="2023"
                    id="2023-July"
                    name="amount"
                    placeholder="0.00"
                    type="number"
                    value="1000"
                  />
                </div>
              </div>
            </div>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              August
            </p>
            <div
              class="d_flex flex-d_column gap_2"
            >
              <label
                for="2023-August"
                hidden=""
              >
                2023-August
              </label>
              <div>
                <div
                  class="css-1op6ogi"
                >
                  <input
                    class="chakra-input css-1ajgvgj"
                    data-month="8"
                    data-year="2023"
                    id="2023-August"
                    name="amount"
                    placeholder="0.00"
                    type="number"
                    value="1000"
                  />
                </div>
              </div>
            </div>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              September
            </p>
            <div
              class="d_flex flex-d_column gap_2"
            >
              <label
                for="2023-September"
                hidden=""
              >
                2023-September
              </label>
              <div>
                <div
                  class="css-1op6ogi"
                >
                  <input
                    class="chakra-input css-1ajgvgj"
                    data-month="9"
                    data-year="2023"
                    id="2023-September"
                    name="amount"
                    placeholder="0.00"
                    type="number"
                    value="1000"
                  />
                </div>
              </div>
            </div>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              October
            </p>
            <div
              class="d_flex flex-d_column gap_2"
            >
              <label
                for="2023-October"
                hidden=""
              >
                2023-October
              </label>
              <div>
                <div
                  class="css-1op6ogi"
                >
                  <input
                    class="chakra-input css-1ajgvgj"
                    data-month="10"
                    data-year="2023"
                    id="2023-October"
                    name="amount"
                    placeholder="0.00"
                    type="number"
                    value="1000"
                  />
                </div>
              </div>
            </div>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              November
            </p>
            <div
              class="d_flex flex-d_column gap_2"
            >
              <label
                for="2023-November"
                hidden=""
              >
                2023-November
              </label>
              <div>
                <div
                  class="css-1op6ogi"
                >
                  <input
                    class="chakra-input css-1ajgvgj"
                    data-month="11"
                    data-year="2023"
                    id="2023-November"
                    name="amount"
                    placeholder="0.00"
                    type="number"
                    value="1000"
                  />
                </div>
              </div>
            </div>
          </div>
          <div>
            <p
              class="css-gyi3bv"
            >
              December
            </p>
            <div
              class="d_flex flex-d_column gap_2"
            >
              <label
                for="2023-December"
                hidden=""
              >
                2023-December
              </label>
              <div>
                <div
                  class="css-1op6ogi"
                >
                  <input
                    class="chakra-input css-1ajgvgj"
                    data-month="12"
                    data-year="2023"
                    id="2023-December"
                    name="amount"
                    placeholder="0.00"
                    type="number"
                    value="1000"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="chakra-stack css-1f0wxn3"
      >
        <button
          class="chakra-button css-tx3yv8"
          type="button"
        >
          addPrevYear
        </button>
        <button
          class="chakra-button css-tx3yv8"
          type="button"
        >
          addNextYear
        </button>
      </div>
    </div>
  </div>
</body>
`;
